--- a/wiki/gun.wikitext
+++ b/wiki/gun.wikitext
@@ -1,3 +1,4 @@
+==English==
 === Etymology ===
 From Middle English ''Lady Gunilda'' which was a huge crossbow that used powerful shot, it later became used for firearms like cannons and muskets.
 
@@ -5,7 +6,7 @@ From Middle English ''Lady Gunilda'' which was a huge crossbow that used powerfu
 *[[w:SAMPA|SAMPA]]: //
 *[[w:IPA|IPA]]: /gʌn/
 
-=== [[noun]] ===
+=== Noun ===
 #(heavy artillery) a [[bullet]] firing [[weapon]].
 #(very portable, short, for hand use) a bullet firing weapon.
 #(less portable, long, for hand use) a bullet firing weapon.
@@ -13,6 +14,7 @@ From Middle English ''Lady Gunilda'' which was a huge crossbow that used powerfu
 
 === Translations ===
 *[[Breton]]: [[kanol]] ''m'' (1), [[arm-tan]] ''m'' (2,3), [[pistolenn]] ''f'' (3)
+*Chinese: [[槍]]
 *[[Dutch]]: [[kanon]] ''n'' (1), [[vuurwapen]] ''n'' (2,3), [[pistool]] ''n'' (2), [[geweer]] ''n'' (3)
 *[[Indonesian]]: [[senapan]], [[pistol]]
 *[[Interlingua]]: [[arma]] de foco
@@ -21,7 +23,7 @@ From Middle English ''Lady Gunilda'' which was a huge crossbow that used powerfu
 *[[Slovene]]: [[top]] ''m'' (1), [[pištola]] ''f'' (2), [[puška]] ''f'' (3) 
 *[[Spanish]]: [[cañon]] ''m'' (1), [[arma]] de fuego ''m'' (2,3), [[pistola]] ''f'' (2)
 
-=== [[verb]] ===
+=== Verb ===
 #to ''gun down'', to shoot someone with a firearm.
 #:''He gunned down the hitmen''.
 #to speed something up.
@@ -42,17 +44,18 @@ From Middle English ''Lady Gunilda'' which was a huge crossbow that used powerfu
 *[[pistol]]
 *[[long rifle]]
 
+----
+
 ==[[Dutch]]==
 
 ===[[Pronunciation]]===
 *[[w:SAMPA|SAMPA]]: //
 *[[w:IPA|IPA]]: /xyn/
 
-===[[verb]]===
-
+===Verb===
 first person present tense of [[gunnen]]
 
 #allowing or indulging something (pleasureable) to somebody
 
 === Translations ===
-*[[English]]: [[grant]], [[indulge]], not [[envy]]
+*English: [[grant]], [[indulge]], not [[envy]]
