/* See also */ <Iran#2358>

--- a/wiki/Iran.wikitext
+++ b/wiki/Iran.wikitext
@@ -39,12 +39,7 @@
 *Turkish: [[İran]]
 *Urdu: [[ایران]] (Īrān)
 
-===See also===
-*[[Persia]]
-*[[Countries of the world]]
-*[[w:Iran|Wikipedia article on Iran]]
-
-----
+tracey
 
 ==Breton==
 ===Noun===
