--- a/wiki/naan.wikitext
+++ b/wiki/naan.wikitext
@@ -1,11 +1,11 @@
 ==English==
 ===Etymology===
-One or more Indic language
+Urdu ''nan'', Persian ''nan''
 
 ===Noun===
 '''naan'''
 
-# One type of [[bread]] common to Indian cuisine.
+# A [[bread]] common to Indian cuisine.
 
 ====Translations====
 *Tamil: [[நான்]]
