etymo, clean up def <willy nilly#65858>

--- a/wiki/willy_nilly.wikitext
+++ b/wiki/willy_nilly.wikitext
@@ -1,7 +1,11 @@
 ==English==
 
 ==Etymology==
-perhaps from '''wilfully'''
+From ''will he, nill he''.
 
-==Adverb??==
-To do something '''willy nilly''' is to do something regardless of intructions otherwise, without regard for consequence
+==Adverb==
+''willy nilly''
+#Without regard for consequences or the will of those affected.
+
+==Adjective==
+''willy nilly''
