--- a/wiki/willy_nilly.wikitext
+++ b/wiki/willy_nilly.wikitext
@@ -4,8 +4,8 @@
 From ''will he, nill he''.
 
 ==Adverb==
-''willy nilly''
+'''willy nilly'''
 #Without regard for consequences or the will of those affected.
 
 ==Adjective==
-''willy nilly''
+'''willy nilly'''
