--- a/wiki/willy_nilly.wikitext
+++ b/wiki/willy_nilly.wikitext
@@ -1,11 +1,11 @@
 ==English==
 
-==Etymology==
+===Etymology===
 From ''will he, nill he''.
 
-==Adverb==
+===Adverb===
 '''willy nilly'''
 #Without regard for consequences or the will of those affected.
 
-==Adjective==
+===Adjective===
 '''willy nilly'''
