--- a/wiki/ansible.wikitext
+++ b/wiki/ansible.wikitext
@@ -1,9 +1,9 @@
 ==English==
 ===Noun===
-# sci-fi term to refer to a communication device that enables users to [[instantaneously]] communicate; [[faster-than-light]] communication device;
+# (''Science Fiction'') A communication device that enables users to instantaneously communicate accross great distances; [[faster-than-light]] communication device.
 
-====Etymology====
+===Etymology===
 First attested in 1974 in [[w:The Dispossessed|The Dispossessed]] by [[w:Ursula K. Le Guin|Ursula K. Le Guin]]. Le Guin herself states that she derived it from ''[[answerable]]''.
 
-==See also==
+===See also===
 For further information see [[w:ansbile|Wikipedia's article on ansible]]
