category: restaurants <food court#695466>

--- a/wiki/food_court.wikitext
+++ b/wiki/food_court.wikitext
@@ -1,3 +1,5 @@
+{{stub}}
+
 [[Image:DSCN3770 simallfoodcourtpizzeriayoungwomen e.JPG|300px|right|thumb|Women waiting for [[pizza]] in the food court of the [[Staten Island Mall]]]]
 
 A '''food court''' is a type of indoor plaza contiguous with the counters of multiple food vendors and providing a common area for self-serve dining. In the [[United States]], food courts became popular in the [[1980s]] in [[shopping mall]]s and [[airport]]s. Food courts are sometimes found in other tourist areas, such as [[Quincy Market]] in downtown [[Boston, Massachusetts|Boston]], a historic market that has been entirely converted to a indoor food court. 
@@ -8,4 +10,4 @@ At a typical food court, patrons order their meals at one of the many counters, 
 
 The common dining area is located in area with a vaulted ceiling or skylights in order to provide a roomier atmosphere with better illumination.
 
-{{stub}}
+[[Category:Restaurants]]
