--- a/wiki/op_shop.wikitext
+++ b/wiki/op_shop.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
-==Etymology==
+===Etymology===
 '''Op'''portunity + '''Shop'''
 
-==Noun==
-Shop where goods, often used, are given to the shop, and then sold for a low price. Usually a charity shop. ''(Usage: Australia)''
+===Noun===
+#(''Australian'') Shop where goods, often used, are given to the shop, and then sold for a low price. Usually a charity shop.
