--- a/wiki/aqueduct.wikitext
+++ b/wiki/aqueduct.wikitext
@@ -1,3 +1,3 @@
-=={{En]]==
+=={{En}}==
 ===Noun===
-# An [[artificial]] ([[man-made]]) [[channel]] that is constructed to [[convey]] [[water]] from one location to another.
+# An artificial [[channel]] that is constructed to convey water from one location to another.
