see also cafeteria <food court#695466>

--- a/wiki/food_court.wikitext
+++ b/wiki/food_court.wikitext
@@ -10,4 +10,7 @@ At a typical food court, patrons order their meals at one of the many counters, 
 
 The common dining area is located in area with a vaulted ceiling or skylights in order to provide a roomier atmosphere with better illumination.
 
+==See also==
+* [[Cafeteria]]
+
 [[Category:Restaurants]]
