--- a/wiki/aqueduct.wikitext
+++ b/wiki/aqueduct.wikitext
@@ -1,3 +1,6 @@
 =={{En}}==
 ===Noun===
 # An artificial [[channel]] that is constructed to convey water from one location to another.
+# A structure carrying water over a river or depression, especially in regards to ancient aqueducts.
+===See Also===
+*Wikipedia article on [[w:aqueduct|aqueducts]].
