--- a/wiki/hello.wikitext
+++ b/wiki/hello.wikitext
@@ -59,6 +59,7 @@
 *Slovak: [[ahoj]] (1), [[servus]] (1), [[haló]] (2)
 *Slovenian: [[zdravo]]
 *Spanish: [[hola]] (1), [[diga]] (2), [[aló]] (2), [[bueno]] (2)
+*[[Swahili]]: jambo
 *Swedish: [[god dag]], [[hallå]], [[hej]]
 *[[Tagalog]]: [[helo]], [[hoy]]
 *[[Tatar]]: [[isänme]](sez)!, [[sälâm]]! (1), [[allo]], [[hallow]] (2)
