--- a/wiki/Kuwait.wikitext
+++ b/wiki/Kuwait.wikitext
@@ -5,7 +5,7 @@
 # Country in the Middle East
 
 ====Official name====
-*[[State of Kuwait]]
+*State of Kuwait
 
 ====Related terms====
 *[[Kuwaiti]]
