see also hawker centre <food court#695466>

--- a/wiki/food_court.wikitext
+++ b/wiki/food_court.wikitext
@@ -12,5 +12,6 @@ The common dining area is located in area with a vaulted ceiling or skylights in
 
 ==See also==
 * [[Cafeteria]]
+* [[Hawker centre]]
 
 [[Category:Restaurants]]
