--- a/wiki/dope.wikitext
+++ b/wiki/dope.wikitext
@@ -11,6 +11,10 @@
 #:''What's the latest dope on the stock market?''
 #(''slang'') (''[[countable]]'') A [[stupid]] person.
 
+===Adjective===
+
+#(''Slang'') Great
+
 ====Translations====
 
 '''viscous liquid used to prepare a surface'''
