--- a/wiki/carnivore.wikitext
+++ b/wiki/carnivore.wikitext
@@ -14,14 +14,15 @@
 *[[Bosnian]]: [[mesojed]] ''m'', [[mesožder]] ''m''
 *Czech: [[masožravec]], ''m''
 *Danish: [[kødæder]]
+*Dutch: [[carnivoor]]
 *Estonian: [[lihasööja]]
 *[[Finnish]]: [[lihansyöjä]]
 *German: [[Fleischfresser]] ''m''
-*Italian: [[carnivoro]] ''m''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
+*Italian: [[carnivoro]] ''m''
 *Japanese: [[食肉目]] (shokuniku-moku), [[いぬ目]]
 *Latin: [[carnivora|carnivora]]
 *Persian: [[گوشتخوار]] (gushtkhar)
