--- a/wiki/Durex.wikitext
+++ b/wiki/Durex.wikitext
@@ -6,3 +6,6 @@
 ===Noun===
 #sticky/adhesive tape (''Aust: - Durex is one popular brand, and is often used as the generic name)
 #condom (''UK: - Durex is one popular brand, and is often used as the generic name)
+
+==French==
+#''(Québec):'' cellophane tape or "Scotch" tape.
