--- a/wiki/search.wikitext
+++ b/wiki/search.wikitext
@@ -67,6 +67,7 @@
 {|
 <!--languages from A to M go here-->
 *[[Catalan]]: [[recerca]]
+*Danish: [[Søgning]]
 *Estonian: [[otsing]]
 *German: [[Suche]] ''f''
 |}
