--- a/wiki/hander.wikitext
+++ b/wiki/hander.wikitext
@@ -1,5 +1,5 @@
 ===Noun===
-#One who hands over or transmits; a conveyor in succession. - [[Dryden]]
+#One who hands over or transmits; a conveyor in succession. - [[John Dryden]]
 
 ===Translations===
 *[[Dutch]]: [[overhandiger]]
