--- a/wiki/teh.wikitext
+++ b/wiki/teh.wikitext
@@ -13,3 +13,8 @@
 
 ====Synonyms====
 *[[ca]]
+
+== TEH ==
+
+European cultural organization which consists of many venues that house the arts.
+It's short for Trans Europe Halles, which homepage is: [http://www.teh.net www.teh.net].
