--- a/wiki/Garfield.wikitext
+++ b/wiki/Garfield.wikitext
@@ -1,2 +1,3 @@
-1. A common comic strip character.
+1. A common comic strip character created by Jim Davis
+
 2. A well-known high school in Seattle.
