--- a/wiki/dell.wikitext
+++ b/wiki/dell.wikitext
@@ -15,3 +15,7 @@ Akin to ''[[dale]]'', ''[[vale]]'', and ''[[valley]]''
 ====Translations====
 *[[Latin]]: [[vallis]]
 *[[Spanish]]: [[valle]] ''f''
+
+===Propper Noun===
+
+A company that makes computer hardware.
