--- a/wiki/idiot.wikitext
+++ b/wiki/idiot.wikitext
@@ -25,6 +25,7 @@ An example of the word's use is as follows:-
 *[[idiotic]]
 *[[idiotially]]
 *[[idiot savant]]
+*[[John Kerry]]
 
 ====Translations====
 *[[Basque]]: [[ergel]]
