--- a/wiki/idiot.wikitext
+++ b/wiki/idiot.wikitext
@@ -14,7 +14,7 @@ An example of the word's use is as follows:-
 
 "Yes."
 
-"Well, I kind of lost it."
+"Well, you know, umm....,I kind of, well, just happened to lose it."
 
 "You '''Idiot'''!"
 
