--- a/wiki/copra.wikitext
+++ b/wiki/copra.wikitext
@@ -4,4 +4,4 @@
 
 '''copra'''
 
-#The dried meat of the cocoanut, from which cocoanut oil is expressed.
+#The dried meat of the coconut, from which coconut oil is expressed.
