--- a/wiki/yoink.wikitext
+++ b/wiki/yoink.wikitext
@@ -3,3 +3,5 @@
 == Etymology ==
 
 Catchphrase from the TV show "The Simpsons. Related to ''yank'' (verb).
+
+Coined by Simpsons writer George Meyer. First appears in episode 9F14, "Duffless".
