--- a/wiki/Allah.wikitext
+++ b/wiki/Allah.wikitext
@@ -5,7 +5,7 @@ Arabic [[الله]] (allāh), from &lrm;[[ال-]]&rlm; (al-) "the" + [[اله|إ
 ===Proper noun===
 '''Allah'''
 
-# The name of the Arabic deity of the [[Muslim]] [[monotheistic]] [[religion]].
+# The deity of the [[Muslim]] [[monotheistic]] [[religion]].
 
 ====Translations====
 *Arabic: [[الله]] (ʾAllāh)
