--- a/wiki/idiot.wikitext
+++ b/wiki/idiot.wikitext
@@ -25,6 +25,8 @@ An example of the word's use is as follows:-
 *[[idiotic]]
 *[[idiotially]]
 *[[idiot savant]]
+*[[John Kerry]]
+*[[Bill Clinton]]
 
 ====Translations====
 *[[Basque]]: [[ergel]]
