fix, import from wikipedia <Southeast Asia#65887>

--- a/wiki/Southeast_Asia.wikitext
+++ b/wiki/Southeast_Asia.wikitext
@@ -1,1 +1,15 @@
-I love mani
+==English==
+===Proper Noun===
+'''Southeast Asia''' 
+#A subregion of [[Asia]].  It includes all of the following territories:
+:* [[Brunei]]
+:* [[Cambodia]]
+:* [[East Timor]]
+:* [[Indonesia]]
+:* [[Laos]]
+:* [[Malaysia]]
+:* [[Myanmar]] (Burma)
+:* [[Philippines|Philippines]]
+:* [[Singapore]]
+:* [[Thailand]]
+:* [[Vietnam]]
