--- a/wiki/caper.wikitext
+++ b/wiki/caper.wikitext
@@ -14,3 +14,6 @@
 '''to caper'''
 
 #To leap or jump about in a sprightly manner; to cut capers; to skip; to spring; to prance; to dance.
+==Latin==
+===Noun===
+#A male [[goat]]. See [[capra]].
