new defs <valley#37321>

--- a/wiki/valley.wikitext
+++ b/wiki/valley.wikitext
@@ -1,11 +1,12 @@
 ===Noun===
 '''valley''' (plural: [[valleys]])
 
-#feature formed by glacier or river [[erosion]] resulting in a lowering of the [[terrain]] from the surrounding
-#any structure resembling 1, eg the meeting point of two pitched roofs
+#An elongated depression between  hills or mountains, often with a river flowing through it.
+#The area which drains into a river.
+#Any structure resembling 1, eg the meeting point of two pitched roofs.
 
 ====Translations====
-*[[Basque]]: [[ibar]]
+*Basque: [[ibar]]
 *Dutch: [[vallei]] ''f'', [[dal]] ''n''
 *French: [[vallée]] ''f''
 *German: [[Senke]] ''f''
