--- a/wiki/valley.wikitext
+++ b/wiki/valley.wikitext
@@ -1,5 +1,5 @@
 ===Noun===
-'''valley''' (plural: [[valleys]])
+'''valley''' (plural: valleys)
 
 #An elongated depression between  hills or mountains, often with a river flowing through it.
 #The area which drains into a river.
