--- a/wiki/borra.wikitext
+++ b/wiki/borra.wikitext
@@ -1,3 +1,13 @@
+==English==
 ===Noun===
 
 #(''Slang'') A knife used as an offensive weapon
+
+----
+
+==Italian==
+===Noun===
+'''borra''' ''f''
+
+# [[waste]]
+# [[cotton]]
