--- a/wiki/cracker.wikitext
+++ b/wiki/cracker.wikitext
@@ -1,9 +1,13 @@
 ==English==
 
+===Etymological Note===
+
+The derogatory sense was originally applied by 18th-century cotton and rice planners to corn and wheat farmers, whose crops hat to be ''[[crack]]ed'' before consumption.
+
 ===Noun===
 
 # A piece of hard, salty, bread.
-# Derogatory term for [[Caucasian]]s
+# Derogatory term for poor Southern whites.
 # One who breaks into computer systems
 
 ==See Also==
