--- a/wiki/capra.wikitext
+++ b/wiki/capra.wikitext
@@ -1,3 +1,16 @@
+==Italian==
+===Noun===
+'''capra''' ''f''
+
+# [[goat]]
+
+===Related terms===
+*[[capretta]]
+*[[caprettina]]
+*[[caprino]]
+*[[capro]]
+
+----
 ==Latin==
 ===Noun===
 #A female [[goat]]. See [[caper]].
