beans, flagstone <dal#29440>

--- a/wiki/dal.wikitext
+++ b/wiki/dal.wikitext
@@ -4,6 +4,9 @@
 # [[decaliter]], [[decalitre]]
 
 ----
+==English==
+===Noun===
+#In [[Indian]] [[cooking]], any of several [[bean]]s or [[lentil]]s.
 ==Dutch==
 ===Noun===
 '''dal''' (Plural: [[dalen]], diminutive: [[dalletje]])
@@ -13,4 +16,4 @@
 ===Noun===
 '''dal''' (Plural: [[dallen]], diminutive: [[dalletje]])
 
-# a type of stone to pave the floor with
+# a type of stone to pave the floor with, [[flagstone]]
