Let's at least fix the wording. <Allah#37048>

--- a/wiki/Allah.wikitext
+++ b/wiki/Allah.wikitext
@@ -5,7 +5,7 @@ Arabic [[الله]] (allāh), from &lrm;[[ال-]]&rlm; (al-) "the" + [[اله|إ
 ===Proper noun===
 '''Allah'''
 
-# The deity of the [[Muslim]] [[monotheistic]] [[religion]].
+# The deity of [[Islam]].
 
 ====Translations====
 *Arabic: [[الله]] (ʾAllāh)
