moved etymology to etymology, -ex, -political barbs <idiot#39074>

--- a/wiki/idiot.wikitext
+++ b/wiki/idiot.wikitext
@@ -1,23 +1,13 @@
 ==English==
+
+===Etymology===
+Greek ιδιωτης, idiôtês, "a private citizen, individual", from ιδιος, idios, "private", used derisively in Athens to refer to one who declined to take part in public life.
+
 ===Noun===
 '''idiot''' ([[idiots]])
 
 #  A common term for a person of low general intelligence.
 #  A [[medical]] or [[psychological]] term meaning a person who has an intelligence quotient (IQ) below 20 (or 30?)
-# In ancient Athens, an idiot was a person who declined to take part in public life, such as democratic city government. Since such activities were honorable and could directly affect all citizens, idiot was a term of derision.
-
-The word comes from the Greek word ιδιωτης, idiôtês, "a private citizen, individual", from ιδιος, idios, "private".
-
-An example of the word's use is as follows:-
-
-"Dave, You know that homework you leant me?"
-
-"Yes."
-
-"Well, you know, umm....,I kind of, well, just happened to lose it."
-
-"You '''Idiot'''!"
-
 
 ====Related terms====
 *[[eejit]] ([[Hiberno English]])
@@ -25,8 +15,6 @@ An example of the word's use is as follows:-
 *[[idiotic]]
 *[[idiotially]]
 *[[idiot savant]]
-*[[John Kerry]]
-*[[Bill Clinton]]
 
 ====Translations====
 *[[Basque]]: [[ergel]]
