--- a/wiki/%E7%AE%AD.wikitext
+++ b/wiki/%E7%AE%AD.wikitext
@@ -11,13 +11,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#arrow
+*# [[arrow]]
 *# type of bamboo
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -29,11 +29,25 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': jin3
 
+===Compounds===
+*[[箭靶子]]
+*[[箭步]]
+*[[箭窗]]
+*[[箭垛子]]
+*[[箭杆]]
+*[[箭楼]]
+*[[箭囊]]
+*[[箭石]]
+*[[箭头]], [[箭头儿]]
+*[[箭在弦上]]
+*[[箭竹]]
+*[[箭镞]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[せん]] (sen)
