--- a/wiki/naan.wikitext
+++ b/wiki/naan.wikitext
@@ -8,4 +8,6 @@ Urdu ''nan'', Persian ''nan''
 # A [[bread]] common to Indian cuisine.
 
 ====Translations====
+*Chinese: [[馕]] (nang)
+*Japanese: [[ナン]] (nan)
 *Tamil: [[நான்]]
