--- a/wiki/buy.wikitext
+++ b/wiki/buy.wikitext
@@ -34,7 +34,7 @@
 *[[Frisian]]: [[keapje]]
 *German: [[kaufen]]
 *[[Guarani]]: [[jogua]]
-*[[Hebrew]]: [[:he:לקנות|לקנות]] /liknot/
+*[[Hebrew]]: [[לקנות]] /liknot/
 *Indonesian: [[beli|membeli]]
 *[[Interlingua]]: [[comprar]], [[emer]]
 *Italian: [[comprare]]
@@ -42,16 +42,9 @@
 *Korean: [[사다]] (sada)
 *Latin: [[emo]]
 *Portuguese: [[comprar]]
-*[[Russian]]: [[:ru:покупать|покупать]] /pokupat'/
+*[[Russian]]: [[покупать]] /pokupat'/
 *Spanish: [[comprar]]
 
 =====to accept=====
 
-
 =====to die=====
-
-==[[multilingual associations]]==
-*[[Russian]]: 
-** '''buy''' [[:ru:обои|обои]] /oboi/ ([[wallpaper]])
-** '''bought''' [[:ru:боты|боты]] /boti'/ (high galoshes) 
-*[[Hebrew]]: '''buy''' [[:he:בעיות|בעיות]] /bai'ot/ ([[problem]]s)
