--- a/wiki/busy.wikitext
+++ b/wiki/busy.wikitext
@@ -1,9 +1,14 @@
+==English==
 ===Adjective===
 '''busy''' ([[busier]], [[busiest]])
 
-====translation====
-*[[Hebrew]]: [[:he:עסוק|עסוק]] /asuk/, [[:he:תפוס|תפוס]] /tafus/
-*[[Russian]]: [[:ru:занятый|занятый]] /zanyati'y/, [[:ru:занятой|занятой]], /zanyatoy/
+====Translations====
+*Chinese: [[繁忙的]]
+*French: [[occupé]]
+*[[Hebrew]]: [[עסוק]] (asuk), [[תפוס]] (tafus)
+*Italian: [[intenso]], [[animato]]
+*Japanese: [[忙しい]] ([[いそがしい]], isogasii)
+*[[Russian]]: [[занятый]] (zanjatyj), [[занятой]], (zanjatoj)
 
 ====Related terms====
 *[[busybody]]
@@ -13,6 +18,3 @@
 '''to busy'''
 
 # to make somebody busy, to rush somebody.
-
-==[[multilingual associations]]==
-*[[Russian]]: [[be]] '''busy''' [[:ru:на|на]] /na/ (at, in) базе ([[base]]) /baze/
