--- a/wiki/endeavour.wikitext
+++ b/wiki/endeavour.wikitext
@@ -1,15 +1,17 @@
-=={{en}}==
-{{synch}} [[endeavour]]
-[[Category:English language]]
+==English==
+<!--If you edit this entry, please also edit the following entry to ensure these two entries remain in synchrony:-->
+endeavour
 ===Alternative spellings===
-*[[endeavour]]
+*[[endeavor]]
+
 ===Etymology===
 {{enm}} [[endevour]], from [[endeveren]], ''to make an effort'', from [[putten in dever|(putten) in dever]], ''(to put oneself) in duty''.
+
 ===Noun===
-'''endeavor''' (''Plural:'' [[endeavors]])
+'''endeavour''' (''Plural:'' [[endeavours]])
 #{{stub}}
 ===Verb===
-'''endeavor'''
+'''endeavour'''
 #{{stub}}
-
+[[Category:English language]]
 [[Category:Definitionless words: English]]
