--- a/wiki/trompe.wikitext
+++ b/wiki/trompe.wikitext
@@ -1,16 +1,18 @@
 ==English==
-
 ===Noun===
-
 '''trompe'''
 
-#A trumpet; a trump.
+#A [[trumpet]]; a [[trump]].
 
-
+----
 ==French==
+===Noun===
+'''trompe''' ''f''
+
+# [[trumpet]]
+# [[trunk]] of an elephant
 
 ===Verb===
-
 '''trompe'''
 
-#Mislead; fool.
+# (''first-, thir-person singular present of [[tromper]]'') mislead; fool.
