--- a/wiki/fortnight.wikitext
+++ b/wiki/fortnight.wikitext
@@ -1,7 +1,11 @@
+==English==
 ===Noun===
 '''fortnight''' (plural: [[fortnights]])
 
 # A period of two [[week]]s.
+
+===Etymology===
+Old English "[[fourteen]] [[night]]s"
 
 ====Related terms====
 *[[fortnightly]]
