--- a/wiki/%E6%A9%98.wikitext
+++ b/wiki/%E6%A9%98.wikitext
@@ -10,11 +10,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': orange, tangerine
+* '''Common Meaning''': [[orange]], [[tangerine]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -26,15 +26,25 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': gwat1
 
+===Compounds===
+*[[橘柑]]
+*[[橘红]]
+*[[橘黄]]
+*[[橘络]]
+*[[橘子]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[きつ]] (kitsu)
 ** '''[[Kun]]''': [[たちばな]] (tachibana)
+
+===Compounds===
+*[[柑橘]]
 
 * '''Other info''':  
 
