--- a/wiki/hinder.wikitext
+++ b/wiki/hinder.wikitext
@@ -5,3 +5,7 @@
 '''hinder'''
 
 #Of or belonging to that part or end which is in the rear, or which follows; as, the hinder part of a wagon; the hinder parts of a horse.
+
+===Verb===
+#To cause someone to be behind.
+#To make it difficult for someone or something to do something.
