+usage note <Allah#37048>

--- a/wiki/Allah.wikitext
+++ b/wiki/Allah.wikitext
@@ -7,6 +7,10 @@ Arabic [[الله]] (allāh), from &lrm;[[ال-]]&rlm; (al-) "the" + [[اله|إ
 
 # The deity of [[Islam]].
 
+===Usage Note===
+
+While the Arabic [[الله]] is used generically to refer to God in Jewish, Christian, Islamic and presumably other contexts, current English usage almost always restricts the term to Islamic contexts only.  Various newspaper style manuals recommend translating the Arabic word as ''God'', as this better reflects Arabic usage, but the term is often left untranslated in Islamic contexts.  Thus either "Allah is great" or "God is great" may be seen.
+
 ====Translations====
 *Arabic: [[الله]] (ʾAllāh)
 *Bulgarian: [[Аллах]]
