--- a/wiki/buy.wikitext
+++ b/wiki/buy.wikitext
@@ -48,3 +48,207 @@
 =====to accept=====
 
 =====to die=====
+[http://www.www.china-cp.com/01index.htm Toys]
+[http://www.www.china-cp.com/02index.htm Trains]
+[http://www.www.china-cp.com/03index.htm Transfer Printing]
+[http://www.www.china-cp.com/04index.htm Transformer]
+[http://www.www.china-cp.com/05index.htm Transformers]
+[http://www.www.china-cp.com/06index.htm Transmission Chain]
+[http://www.www.china-cp.com/07index.htm Transmission Parts]
+[http://www.www.china-cp.com/08index.htm Transport Packaging]
+[http://www.www.china-cp.com/09index.htm Transportation]
+[http://www.www.china-cp.com/10index.htm Travel Products]
+[http://www.www.china-cp.com/11index.htm Truck]
+[http://www.www.china-cp.com/12index.htm Tube Assembly]
+[http://www.www.china-cp.com/13index.htm Tubes]
+[http://www.www.china-cp.com/14index.htm TV Broadcasting]
+[http://www.www.china-cp.com/15index.htm TV Equipment]
+[http://www.www.china-cp.com/16index.htm Undertaking Contracted Projects]
+[http://www.www.china-cp.com/17index.htm Uninterrupted Power Supply]
+[http://www.www.china-cp.com/18index.htm Upholstery Textile]
+[http://www.www.china-cp.com/19index.htm UPS]
+[http://www.www.china-cp.com/20index.htm Urinals]
+[http://www.www.china-cp.com/21index.htm Used Machinery]
+[http://www.www.china-cp.com/22index.htm Utensils]
+[http://www.www.china-cp.com/23index.htm Vacuum Cleaner]
+[http://www.www.china-cp.com/24index.htm Vacuum Equipmen]
+[http://www.www.china-cp.com/25index.htm Valves]
+[http://www.www.china-cp.com/26index.htm Vanity Top] 
+http://www.china-cp.com/index.html
+http://www.china-cp.com/products.htm
+http://www.china-cp.com/tuijian.htm
+http://www.china-cp.com/zhuyao.htm
+http://www.china-cp.com/shiyong.htm
+http://www.china-cp.com/jianjie.htm
+http://www.china-cp.com/rongyu.htm
+http://www.china-cp.com/lianxi.htm 
+[http://www.commovie-china.com/01index.htm Vaseline]
+[http://www.commovie-china.com/02index.htm Vases]
+[http://www.commovie-china.com/03index.htm VCR Player]
+[http://www.commovie-china.com/04index.htm Velvet]
+[http://www.commovie-china.com/05index.htm Vessels]
+[http://www.commovie-china.com/06index.htm Veterinary Medicine]
+[http://www.commovie-china.com/07index.htm Video Cable]
+[http://www.commovie-china.com/08index.htm Video Camera]
+[http://www.commovie-china.com/09index.htm Video conferencing]
+[http://www.commovie-china.com/10index.htm Video Door Phone]
+[http://www.commovie-china.com/11index.htm Video Equipment]
+[http://www.commovie-china.com/12index.htm Video Phones]
+[http://www.commovie-china.com/13index.htm Villas]
+[http://www.commovie-china.com/14index.htm Viscose Blend Fabric]
+[http://www.commovie-china.com/15index.htm Viscose Fabric]
+[http://www.commovie-china.com/16index.htm Visual Presenter]
+[http://www.commovie-china.com/17index.htm Volleyball]
+[http://www.commovie-china.com/18index.htm Voltage Regulator]
+[http://www.commovie-china.com/19index.htm Wall Materials]
+[http://www.commovie-china.com/20index.htm Wallpaper]
+[http://www.commovie-china.com/21index.htm Wash Basin]
+[http://www.commovie-china.com/22index.htm Washing Machine]
+[http://www.commovie-china.com/23index.htm Waste Management]
+[http://www.commovie-china.com/24index.htm Waste Paper]
+[http://www.commovie-china.com/25index.htm Water Dispenser]
+[http://www.commovie-china.com/26index.htm Water Heater] 
+http://www.commovie-china.com/index.htm
+http://www.commovie-china.com/products.htm
+http://www.commovie-china.com/tuijian.htm
+http://www.commovie-china.com/zhuyao.htm
+http://www.commovie-china.com/shiyong.htm
+http://www.commovie-china.com/jianjie.htm
+http://www.commovie-china.com/rongyu.htm
+http://www.commovie-china.com/lianxi.htm 
+[http://www.Invite-cn.com/01index.htm Textile Processing]
+[http://www.Invite-cn.com/02index.htm Textile Stocks]
+[http://www.Invite-cn.com/03index.htm Textile Waste]
+[http://www.Invite-cn.com/04index.htm Textiles]
+[http://www.Invite-cn.com/05index.htm Thread]
+[http://www.Invite-cn.com/06index.htm Thrust Ball Bearing]
+[http://www.Invite-cn.com/07index.htm Timber]
+[http://www.Invite-cn.com/08index.htm Time Recording]
+[http://www.Invite-cn.com/09index.htm Timer]
+[http://www.Invite-cn.com/10index.htm Tire Parts]
+[http://www.Invite-cn.com/11index.htm Toaster]
+[http://www.Invite-cn.com/12index.htm Tobacco]
+[http://www.Invite-cn.com/13index.htm Toilet Appliances]
+[http://www.Invite-cn.com/14index.htm Toilet Seats]
+[http://www.Invite-cn.com/15index.htm Toilets]
+[http://www.Invite-cn.com/16index.htm Tombstone and Monument]
+[http://www.Invite-cn.com/17index.htm Tool Case]
+[http://www.Invite-cn.com/18index.htm Tool Sets]
+[http://www.Invite-cn.com/19index.htm Torches]
+[http://www.Invite-cn.com/20index.htm Towel]
+[http://www.Invite-cn.com/21index.htm Towel Racks]
+[http://www.Invite-cn.com/22index.htm Toy Accessories]
+[http://www.Invite-cn.com/23index.htm Toy Agents]
+[http://www.Invite-cn.com/24index.htm Toy Cars]
+[http://www.Invite-cn.com/25index.htm Toy Guns]
+[http://www.Invite-cn.com/26index.htm Toy Stocks] 
+http://www.Invite-cn.com/index.htm
+http://www.Invite-cn.com/products.htm
+http://www.Invite-cn.com/tuijian.htm
+http://www.Invite-cn.com/zhuyao.htm
+http://www.Invite-cn.com/shiyong.htm
+http://www.Invite-cn.com/jianjie.htm
+http://www.Invite-cn.com/rongyu.htm
+http://www.Invite-cn.com/lianxi.htm 
+[http://www.8660000.com/01-200.htm Hot]
+[http://www.8660000.com/02-200.htm Hot a plank]
+[http://www.8660000.com/03-200.htm Artificial]
+[http://www.8660000.com/04-200.htm Capacity pump]
+[http://www.8660000.com/05-200.htm Container]
+[http://www.8660000.com/06-200.htm cup]
+[http://www.8660000.com/07-200.htm salt]
+[http://www.8660000.com/08-200.htm Soft packer]
+[http://www.8660000.com/09-200.htm Soft tube]
+[http://www.8660000.com/10-200.htm Cork]
+[http://www.8660000.com/11-200.htm Spread a filler]
+[http://www.8660000.com/12-200.htm Scan the]
+[http://www.8660000.com/13-200.htm Color syrup]
+[http://www.8660000.com/14-200.htm Fuel flowmeter]
+[http://www.8660000.com/15-200.htm Dyestuff bucket]
+[http://www.8660000.com/16-200.htm Hot processor]
+[http://www.8660000.com/17-200.htm Thermocouple]
+[http://www.8660000.com/18-200.htm Hot breeze]
+[http://www.8660000.com/19-200.htm Hot a machine]
+[http://www.8660000.com/20-200.htm Hot machine set]
+[http://www.8660000.com/21-200.htm Heat exchanger]
+[http://www.8660000.com/22-200.htm Hot water pump]
+[http://www.8660000.com/23-200.htm Hot water boiler]
+[http://www.8660000.com/24-200.htm Hot water]
+[http://www.8660000.com/25-200.htm Hot a tube]
+[http://www.8660000.com/26-200.htm Hot picture] 
+http://www.8660000.com/index.htm
+http://www.8660000.com/products.htm
+http://www.8660000.com/tuijian.htm
+http://www.8660000.com/zhuyao.htm
+http://www.8660000.com/shiyong.htm
+http://www.8660000.com/jianjie.htm
+http://www.8660000.com/rongyu.htm
+http://www.8660000.com/lianxi.htm 
+[http://www.6690000.com/01-200.htm Top stalk]
+[http://www.6690000.com/02-200.htm Burn the]
+[http://www.6690000.com/03-200.htm Radio frequency]
+[http://www.6690000.com/04-200.htm Flexible pole]
+[http://www.6690000.com/05-200.htm Flexible stage]
+[http://www.6690000.com/06-200.htm water pump]
+[http://www.6690000.com/07-200.htm carbon]
+[http://www.6690000.com/08-200.htm Elevator]
+[http://www.6690000.com/09-200.htm Life tea]
+[http://www.6690000.com/10-200.htm Life boiler]
+[http://www.6690000.com/11-200.htm Rope]
+[http://www.6690000.com/12-200.htm Rope net]
+[http://www.6690000.com/13-200.htm Construction tool]
+[http://www.6690000.com/14-200.htm Color metals]
+[http://www.6690000.com/15-200.htm Color card]
+[http://www.6690000.com/16-200.htm Sofa machine]
+[http://www.6690000.com/17-200.htm Sand pump]
+[http://www.6690000.com/18-200.htm Emery cloth]
+[http://www.6690000.com/19-200.htm Sand book]
+[http://www.6690000.com/20-200.htm Sand dish]
+[http://www.6690000.com/21-200.htm Sand paper]
+[http://www.6690000.com/23-200.htm Sieve]
+[http://www.6690000.com/23-200.htm Goat hair]
+[http://www.6690000.com/24-200.htm Flashlight vest]
+[http://www.6690000.com/25-200.htm Flashlight ball]
+[http://www.6690000.com/26-200.htm Trademark] 
+http://www.6690000.com/index.htm
+http://www.6690000.com/products.htm
+http://www.6690000.com/tuijian.htm
+http://www.6690000.com/zhuyao.htm
+http://www.6690000.com/shiyong.htm
+http://www.6690000.com/jianjie.htm
+http://www.6690000.com/rongyu.htm
+http://www.6690000.com/lianxi.htm 
+[http://www.6680000.com/01-200.htm Solid tire]
+[http://www.6680000.com/02-200.htm Food packing material]
+[http://www.6680000.com/03-200.htm Food packer]
+[http://www.6680000.com/04-200.htm Food machine]
+[http://www.6680000.com/05-200.htm The food clips]
+[http://www.6680000.com/06-200.htm Show a machine]
+[http://www.6680000.com/07-200.htm See the]
+[http://www.6680000.com/08-200.htm Try]
+[http://www.6680000.com/09-200.htm Indoors thermometer]
+[http://www.6680000.com/10-200.htm Charge system]
+[http://www.6680000.com/11-200.htm Accept a machine]
+[http://www.6680000.com/12-200.htm Contract packer]
+[http://www.6680000.com/13-200.htm Radio]
+[http://www.6680000.com/14-200.htm enamel line]
+[http://www.6680000.com/15-200.htm Hygrometer]
+[http://www.6680000.com/16-200.htm work]
+[http://www.6680000.com/17-200.htm Graphite slice]
+[http://www.6680000.com/18-200.htm Rock]
+[http://www.6680000.com/19-200.htm Quartz]
+[http://www.6680000.com/20-200.htm Quartz piece]
+[http://www.6680000.com/21-200.htm Quartz sand]
+[http://www.6680000.com/22-200.htm Petroleum piping]
+[http://www.6680000.com/23-200.htm Petroleum machine]
+[http://www.6680000.com/24-200.htm Petroleum oil pump]
+[http://www.6680000.com/25-200.htm Petroleum auger]
+[http://www.6680000.com/26-200.htm The products] 
+http://www.6680000.com/index.htm
+http://www.6680000.com/products.htm
+http://www.6680000.com/tuijian.htm
+http://www.6680000.com/zhuyao.htm
+http://www.6680000.com/shiyong.htm
+http://www.6680000.com/jianjie.htm
+http://www.6680000.com/rongyu.htm
+http://www.6680000.com/lianxi.htm
