/* Reproduction */ desemantify. <ecocide#684589>

--- a/wiki/ecocide.wikitext
+++ b/wiki/ecocide.wikitext
@@ -6,7 +6,7 @@ A difficult question is whether an ecosystem is alive in the sense of a single l
 
 === Reproduction ===
 
-An ecosystem typically does not reproduce, and it typically has a [[homeorhetic]] equilibrium and not a full homeostasis.  However, a [[virus]] or [[prion]] or [[molecular assembler]] or perhaps a [[clanking replicator]] also lacks their own reproduction, homeostasis, and thus full status as a life form, but it would not be difficult to identify when they had been "killed", i.e. lost their integrity or "died", unable to perform their normal functions any more.
+An ecosystem typically has a [[homeorhetic]] equilibrium rather than a full homeostasis.  However, a [[virus]] or [[prion]] or [[molecular assembler]] or perhaps a [[clanking replicator]] also lacks their own reproduction, homeostasis, and thus full status as a life form, but it would not be difficult to identify when they had been "killed", i.e. lost their integrity or "died", unable to perform their normal functions any more.
 
 === Resource ===
 
