--- a/wiki/fragile.wikitext
+++ b/wiki/fragile.wikitext
@@ -19,7 +19,7 @@ from Latin ''[[fragilis]]'', cognate with [[frail]]
 ----
 
 ==Italian==
-===Adjective==
+===Adjective===
 '''fragile'''
 
 # fragile
