--- a/wiki/%E6%BD%9C.wikitext
+++ b/wiki/%E6%BD%9C.wikitext
@@ -13,13 +13,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#hide
-*# hidden, secret, latent
+*# [[hide]]
+*# [[hidden]], [[secret]], [[latent]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -34,15 +34,53 @@
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[潛]]
 
+===Compounds===
+*[[潜步]]
+*[[潜藏]]
+*[[潜遁]]
+*[[潜伏]]
+*[[潜伏期]]
+*[[潜航]]
+*[[潜力]]
+*[[潜流]]
+*[[潜能]]
+*[[潜匿]]
+*[[潜入]]
+*[[潜水]]
+*[[潜水艇]]
+*[[潜水衣]]
+*[[潜水员]]
+*[[潜台词]]
+*[[潜逃]]
+*[[潜艇]]
+*[[潜望镜]]
+*[[潜心]]
+*[[潜行]]
+*[[潜移默化]]
+*[[潜意识]]
+*[[潜隐]]
+*[[潜泳]]
+*[[潜在]]
+*[[潜滋暗长]]
+*[[潜踪]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[せん]] (sen)
 ** '''[[Kun]]''': [[ひそむ]] (hisomu), [[もぐる]] (moguru)
+
+===Compounds===
+*[[潜行]]
+*[[潜在]]
+*[[潜水]]
+*[[潜水艇]]
+*[[潜入]]
+*[[潜伏]]
 
 * '''Other info''':  
 
