--- a/wiki/flaw.wikitext
+++ b/wiki/flaw.wikitext
@@ -8,3 +8,9 @@
 #A defect; a fault; as, a flaw in reputation; a flaw in a will, in a deed, or in a statute.
 #A sudden burst of noise and disorder; a tumult; uproar; a quarrel.
 #A sudden burst or gust of wind of short duration.
+
+===Verb===
+
+'''to flaw'''
+
+#Add a flaw to; make imperfect or defective.
