--- a/wiki/%E8%97%8F.wikitext
+++ b/wiki/%E8%97%8F.wikitext
@@ -24,13 +24,43 @@
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
-*** '''[[Pinyin]]''': cáng (cang2)
-*** '''[[Wade-Giles]]''': ts'ang<sup>2</sup>
+*** '''[[Pinyin]]''': cáng (cang2), zàng (zang4)
+*** '''[[Wade-Giles]]''': ts'ang<sup>2</sup>, tsang<sup>4</sup>
 *** '''[[Yale]]''': 
 ** '''[[Cantonese]]'''
 *** '''[[Jyutping]]''':
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': chong4, jong6
+
+===Compounds===
+#cáng
+#*[[藏不住]]
+#*[[藏躲]]
+#*[[藏垢纳污]]
+#*[[藏奸]]
+#*[[藏龙卧虎]]
+#*[[藏猫儿]]
+#*[[藏闷儿]]
+#*[[藏匿]]
+#*[[藏品]]
+#*[[藏身]]
+#*[[藏书]]
+#*[[藏书票]]
+#*[[藏头露尾]]
+#*[[藏蓄]]
+#*[[藏掩]]
+#*[[藏掖]], [[藏掖儿]]
+#*[[藏拙]]
+#*[[藏踪]]
+#zàng
+#*[[藏蓝]]
+#*[[藏历]]
+#*[[藏青]]
+#*[[藏文]]
+#*[[藏香]]
+#*[[藏医]]
+#*[[藏语]]
+#*[[藏族]]
 
 * '''Other info''': 
 
