--- a/wiki/%E8%B8%AA.wikitext
+++ b/wiki/%E8%B8%AA.wikitext
@@ -12,11 +12,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': footprints, traces, tracks
+* '''Common Meaning''': [[footprint]]s, [[trace]]s, [[track]]s
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -31,11 +31,15 @@
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[蹤]]
 
+===Compounds===
+*[[踪迹]]
+*[[踪影]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[しょう]] (shō), [[そう]] (sō)
