--- a/wiki/%E7%BD%AA.wikitext
+++ b/wiki/%E7%BD%AA.wikitext
@@ -13,14 +13,14 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#crime, sin, vice
-*# evil
-*# hardship
+*# [[crime]], [[sin]], [[vice]]
+*# [[evil]]
+*# [[hardship]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -32,15 +32,44 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': jeui6
 
+===Compounds===
+*[[罪案]]
+*[[罪不容诛]]
+*[[罪大恶极]]
+*[[罪当万死]]
+*[[罪恶]]
+*[[罪犯]]
+*[[罪该万死]]
+*[[罪过]]
+*[[罪迹]]
+*[[罪魁]]
+*[[罪魁祸首]]
+*[[罪名]]
+*[[罪孽]]
+*[[罪情]]
+*[[罪人]]
+*[[罪行]]
+*[[罪刑]]
+*[[罪业]]
+*[[罪有应得]]
+*[[罪责]]
+*[[罪证]]
+*[[罪状]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[ざい]] (zai), [[さい]] (sai)
 ** '''[[Kun]]''': [[つみ]] (tsumi), [[つみする]] (tsumisuru)
+
+===Compounds===
+*[[罪悪感]]
+*[[罪状]]
+*[[罪人]]
 
 * '''Other info''':  
 
