+en: compar & superl <fragile#65916>

--- a/wiki/fragile.wikitext
+++ b/wiki/fragile.wikitext
@@ -1,6 +1,7 @@
 ==English==
 ===Adjective===
-'''fragile'''
+'''fragile''' (''[[comparative]]'' '''more fragile''', ''[[superlative]]'' '''most fragile''')
+
 ===Etymology===
 from Latin ''[[fragilis]]'', cognate with [[frail]]
 
