--- a/wiki/i18n.wikitext
+++ b/wiki/i18n.wikitext
@@ -1,9 +1,8 @@
 ==English==
-
 ===Etymology===
-Representing ''internationalization'' as "i", 18 more letters, "n".
+Representing ''internationalization'' as "i" followed by 18 more letters, followed by "n".
 
 ===Noun===
 '''i18n''' or '''I18N'''
 
-# [[internationalization]]
+#(''computing'') [[Internationalization]].
