--- a/wiki/i18n.wikitext
+++ b/wiki/i18n.wikitext
@@ -1,8 +1,1 @@
-==English==
-===Etymology===
-Representing ''internationalization'' as "i" followed by 18 more letters, followed by "n".
-
-===Noun===
-'''i18n''' or '''I18N'''
-
-#(''computing'') [[Internationalization]].
+#REDIRECT [[i18n]]
