--- a/wiki/i18n.wikitext
+++ b/wiki/i18n.wikitext
@@ -1,1 +1,8 @@
-#REDIRECT [[i18n]]
+==English==
+===Etymology===
+Representing ''internationalization'' as "i" followed by 18 more letters, followed by "n".
+
+===Noun===
+'''i18n''' or '''I18N'''
+
+#(''software engineering'') [[Internationalization]].
