--- a/wiki/%E5%85%8B.wikitext
+++ b/wiki/%E5%85%8B.wikitext
@@ -13,14 +13,14 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#gram
-*# overcome
-*# transliteration
+*# [[overcome]]
+*# transliteration for /k/ or /ko/
+*#* [[gram]], [[gramme]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -35,15 +35,45 @@
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[剋]]
 
+===Compounds===
+*[[克当量]]
+*[[克敌制胜]]
+*[[克分子]]
+*[[克服]]
+*[[克复]]
+*[[克格勃]]
+*[[克己]]
+*[[克己奉公]]
+*[[克减]]
+*[[克扣]]
+*[[克拉]]
+*[[克朗]]
+*[[克里姆林宫]]
+*[[克隆]]
+*[[克罗地亚]]
+*[[克勤克俭]]
+*[[克食]]
+*[[克式量]]
+*[[克丝钳子]]
+*[[克星]]
+*[[克抑]]
+*[[克原子]]
+*[[克制]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[こく]] (koku)
 ** '''[[Kun]]''': [[かつ]] (katsu), [[よい]] (yoi), [[よく]] (yoku)
+
+===Compounds===
+*[[克己]]
+*[[克服]]
+*[[克明]]
 
 * '''Other info''':  
 
