capitalisation; fmt <Southeast Asia#65887>

--- a/wiki/Southeast_Asia.wikitext
+++ b/wiki/Southeast_Asia.wikitext
@@ -1,15 +1,5 @@
 ==English==
-===Proper Noun===
-'''Southeast Asia''' 
-#A subregion of [[Asia]].  It includes all of the following territories:
-:* [[Brunei]]
-:* [[Cambodia]]
-:* [[East Timor]]
-:* [[Indonesia]]
-:* [[Laos]]
-:* [[Malaysia]]
-:* [[Myanmar]] (Burma)
-:* [[Philippines|Philippines]]
-:* [[Singapore]]
-:* [[Thailand]]
-:* [[Vietnam]]
+===Proper noun===
+'''southeast Asia'''
+
+#A subregion of [[Asia]], comprising the territories of [[Brunei]], [[Cambodia]], [[East Timor]], [[Indonesia]], [[Laos]], [[Malaysia]], [[Myanmar]] (formerly known as [[Burma]]), the [[Philippines]], [[Singapore]], [[Thailand]] and [[Vietnam]].
