fmt; extra syn; inflexions <call on the carpet#65881>

--- a/wiki/call_on_the_carpet.wikitext
+++ b/wiki/call_on_the_carpet.wikitext
@@ -1,6 +1,8 @@
 ==English==
 ===Verb===
-#censure severely or angrily; [[reprimand]]; 
+'''to call on the carpet''' ('''calling on the carpet''', '''called on the carpet''', '''called on the carpet''')
+
+#To censure severely or angrily; to [[reprimand]].
 
 ====Synonyms====
 *[[bawl out]]
@@ -20,4 +22,5 @@
 *[[reprimand]]
 *[[reproof]]
 *[[scold]]
+*[[tell off]]
 *[[trounce]]
