fmt; +gender, plural and extra translation <chêne#65866>

--- a/wiki/ch%C3%AAne.wikitext
+++ b/wiki/ch%C3%AAne.wikitext
@@ -1,3 +1,6 @@
 ==French==
+===Noun===
+'''chêne''' ''m'' (''plural'' '''chênes''')
 
-[[oak]]
+#[[oak]] (''tree''), [[oak tree]]
+#oak (''the wood of the tree'')
