fmt; can someone give a date for the quotation, please; does "at the best" really exist as a synonym? <at the best of times#65861>

--- a/wiki/at_the_best_of_times.wikitext
+++ b/wiki/at_the_best_of_times.wikitext
@@ -1,7 +1,12 @@
 ==English==
 ===Adverb===
-#When everything is going well. Especially used to compare to another or the current situation.
-#:''"My boredom [[threshold]] is low [[at the best of times]] but I have spent more time being slowly and [[excruciatingly]] bored by children than any other section of the human race."'' -- [[w:William Edgar Borah|William Edgar Borah]], American statesman
+'''at the best of times'''
+
+#When everything is going well, in comparison to another or the current situation.
+
+====Quotations====
+*'''????''': My boredom [[threshold]] is low '''at the best of times''' but I have spent more time being slowly and [[excruciatingly]] bored by children than any other section of the human race. &mdash; [[w:William Edgar Borah|William Edgar Borah]]
+
 ====Synonyms====
 *[[at best]]
-*[[at the best]]
+*[[at the best]]<!--does this exist?-->
