--- a/wiki/perdere.wikitext
+++ b/wiki/perdere.wikitext
@@ -1,5 +1,10 @@
 ==Italian==
-===Verb===
+===Transitive verb===
+'''perdere'''
+
+#to [[lose]]
+
+===Intransitive verb===
 '''perdere'''
 
 #to [[lose]]
