--- a/wiki/ansible.wikitext
+++ b/wiki/ansible.wikitext
@@ -1,9 +1,11 @@
 ==English==
-===Noun===
-# (''Science Fiction'') A communication device that enables users to instantaneously communicate accross great distances; [[faster-than-light]] communication device.
-
 ===Etymology===
-First attested in 1974 in [[w:The Dispossessed|The Dispossessed]] by [[w:Ursula K. Le Guin|Ursula K. Le Guin]]. Le Guin herself states that she derived it from ''[[answerable]]''.
+First used in 1974 in [[w:The Dispossessed|The Dispossessed]] by [[w:Ursula K. Le Guin|Ursula K. Le Guin]]; Le Guin states that she derived it from ''[[answerable]]''.
+
+===Noun===
+'''ansible''' (''plural'' '''ansibles''')
+
+# (''science fiction'') A [[hypothetical]] device that enables users to communicate [[instantaneously]] across great distances; that is, a [[faster-than-light]] communication device.
 
 ===See also===
-For further information see [[w:ansbile|Wikipedia's article on ansible]]
+*[[w:ansible|Wikipedia article on ansibles]]
